# openclaw-workspace

./: .gitignore
SkeletalAnimation/: README.md  cleanup.py  index.html
SkeletalAnimation/assets/: baozoulongnv_ske_0_21234.dbbin  baozoulongnv_tex_0_21234.txt  baozoulongnv_tex_1_21234.txt  (+31 more)
agent-builder/: .env.example  README.md  config.json  docker-compose.yml  main.py  requirements.txt
browser-debug-tool/: package-lock.json  package.json  readme.md  server-optimized.js  server.js
chemistry-game/: .editorconfig  .eslintrc.json  DEVELOPMENT.md  README.md  jsdoc.conf.json  package-lock.json  package.json
geometry-tutorial/: index.html
python-ai-book/: README.md  requirements.txt  server.py
rag-builder/: .gitignore  README.md  pyproject.toml
rag-builder/rag_builder/: __init__.py  chunker.py  cli.py  config.py  embedder.py  generator.py  indexer.py  retriever.py  wizard.py
rag-builder/rag_builder/agent/: __init__.py  builder.py  memory.py  tools.py
rag-builder/rag_builder/parsers/: __init__.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
rag-builder/templates/advanced/: README.md.j2  app.py.j2  index_docs.py.j2  main.py.j2
rag-builder/templates/basic/: main.py.j2
rag-builder/tests/: conftest.py  test_agent.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_generator.py  test_indexer.py  test_parsers.py  test_retriever.py  test_vectorstore.py
sprite_sheet_tool/: README.md  check_size.py  gen_sprite_demo.py  run_tool.py  sprite_preview.py  test_path.py
taichu/: index.html  设定文档.md
(+95 files in other folders)
