[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-builder"
version = "0.1.0"
description = "One-click RAG + Agent knowledge base generator from your documents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer[standard]>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Document parsing
    "pypdf>=3.0",
    "python-docx>=0.8.11",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    # Embedding & LLM
    "openai>=1.0",
    "httpx>=0.25",
    # Vector stores
    "chromadb>=0.4",
    # Text processing
    "tiktoken>=0.5",
    "chardet>=5.0",
    # Template rendering
    "jinja2>=3.1",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
local = ["sentence-transformers>=2.2", "torch>=2.0"]
all = ["rag-builder[faiss,local]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
rag-builder = "rag_builder.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
